--- a/_styles/components/header.scss
+++ b/_styles/components/header.scss
@@ -4,5 +4,5 @@
 
 header{
     // background-color: $light;
-    border-bottom: 1px solid $primary-colour;
+    border-bottom: 1px solid $secondary-colour;
 }
