--- a/bundle.scss
+++ b/bundle.scss
@@ -3,7 +3,9 @@
 
 @import
 "variables",
+"breakpoints",
 "fonts",
 "layout",
 "components/header",
-"components/header-nav";
+"components/header-nav",
+"syntax-highlighter";
