--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,5 @@
 <nav class="wrapper header-nav">
     <ul class="nav-list">
-        <li class="nav-list__item"><a  class="nav-list__link" href="">Home</a></li>
-        <li class="nav-list__item"><a  class="nav-list__link" href="">About</a></li>
+        <li class="nav-list__item"><a class="nav-list__link" href="{{ site.url }}">Home</a></li>
     </ul>
 </nav>
