--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,5 +4,7 @@
 {% include head.html %}
 {% include navigation.html %}
 {% include header-post.html %}
-    <section class="wrapper">{{ content }}</section>
+    <section class="wrapper">
+    {{ content }}
+    </section>
 {% include footer.html %}
