--- a/_styles/syntax-highlighter.scss
+++ b/_styles/syntax-highlighter.scss
@@ -1,3 +1,9 @@
+.highlight{
+    padding: $base-unit;
+    margin: 0 ;
+    overflow-x: scroll;
+}
+
 .highlight .hll { background-color: #ffffcc }
 .highlight  { background: #f8f8f8; }
 .highlight .c { color: #408080; font-style: italic } /* Comment */
