--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="manifest" href="{{ 'assets/json/manifest.json' | absolute_url }}">
+
+    {% if page.manifest %}
+    <link rel="manifest" href="{{ site.url }}/assets/json/{{ page.manifest }}">
+    {% endif %}
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="{{ '/bundle.css' | absolute_url }}">
+    <link rel="icon" type="image/png" href="{{ site.url }}/favicon.png">
     <script>
         {% include js/register-service-worker.js %}
     </script>
