--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,5 @@
-    <footer class="wrapper"></footer>
+    <footer class="wrapper">
+        Last published on: {{ site.time | date: "%r %D" }}
+    </footer>
     </body>
 </html>
