--- a/bundle.scss
+++ b/bundle.scss
@@ -7,6 +7,7 @@
 "fonts",
 "layout",
 "components/header",
+"components/footer",
 "components/header-nav",
 "components/list",
 "syntax-highlighter";
