--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,7 +33,7 @@
     {% endif %}
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="{{ '/bundle.css' | absolute_url }}">
-    <link rel="icon" type="image/png" href="{{ site.url }}/favicon.png">
+    <!-- <link rel="icon" type="image/png" href="{{ site.url }}/favicon.png"> -->
     <script>
         {% include js/register-service-worker.js %}
     </script>
