+ Meta page title

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -46,6 +46,6 @@
     {% endif %}
     </script>
     
-    <title>{{ site.title }}</title>
+    <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
 </head>
 <body>
