--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,8 +10,10 @@
             <a class="list__link" href="{{ post.url }}">{{ post.title }}</a>
                 <p class="list__info">
                     <span class="list__excerpt">{{ post.excerpt | remove: '<p>' | remove: '</p>' }}</span>
-                    <span class="list_categories">{{ post.categories }}</span>
-                </p>            
+                </p>
+                {% for tag in post.tags %}
+                    <span class="list__tag">{{ tag }}</span>
+                {% endfor %}
             </li>
             {% endfor %}
         </ul>
