--- a/_styles/components/list.scss
+++ b/_styles/components/list.scss
@@ -24,4 +24,11 @@
         display: flex;
         justify-content: space-between;
     }
+
+    &__tag{
+        font-size: 10px;
+        border: 1px solid grey;
+        padding: 2px 4px;
+        border-radius: 3px;
+    }
 }
