--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,19 +28,41 @@
     <meta name="msapplication-TileImage" content="/assets/img/favicons/mstile-144x144.png?etag=8V/DcpiXqp9og1TKygQwUQ=="> -->
     <meta name="theme-color" content="{{ site.theme-colour }}">
 
-    {% if page.manifest %}
-    <link rel="manifest" href="{{ site.url }}/assets/json/{{ page.manifest }}">
-    {% else %}
-    <link rel="manifest" href="{{ site.url }}/assets/json/manifest.json">
-    {% endif %}
-
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="{{ '/bundle.css' | absolute_url }}">
     <!-- <link rel="icon" type="image/png" href="{{ site.url }}/favicon.png"> -->
 
     <script>
-        {% include js/register-service-worker.js %}
+    //some default pre init
+    var PB = PB || {};PB.q = PB.q || [];PB.events = PB.events || [];
+    
+    //********** Update these fields ********
+    //PushBots ApplicationId (required)
+    PB.app_id = "5c8a6b690540a3348e21cf42";
+    //Your domain name, must be HTTPS or localhost  (required)
+    PB.domain = "https://jet2hangar.github.io";
+    //Update and uncomment it if you are using custom safari certificate for your app
+    //PB.safari_push_id = "web.com.pushbots.main";
+    //****************************************
+    
+    PB.logging_enabled = true;
+    PB.auto_subscribe = true;
+    
+    //Custom worker and manifest URL
+    //PB.worker_url = PB.domain + "/pushbots-worker.js";
+    //PB.manifest_url = PB.domain + "/pushbots-push-manifest.json";
+    
+    //Welcome notification message
+    PB.welcome = {title:"Welcome ",message:"Thanks for subscribing!", url :PB.domain};
+    
+    function sendNotification(){
+            PB.register();
+            PB.q.push(["sendNotification", {title:"Hey ",message:"Why not?", url :"https://google.com"}]);
+    }
+    
     </script>
+    
+    <script src="//cdn.pushbots.com/js/sdk.min.js" type="text/javascript" onload="PB.init()" async></script>
     
     <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
 </head>
