--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,17 +5,9 @@
 {% include header.html %}
     <section class="wrapper">        
         <ul class="list">
-            {% for post in site.posts %}
             <li class="list__item">
-            <a class="list__link" href="{{ post.url }}">{{ post.title }}</a>
-                <p class="list__info">
-                    <span class="list__excerpt">{{ post.excerpt | remove: '<p>' | remove: '</p>' }}</span>
-                </p>
-                {% for tag in post.tags %}
-                    <span class="list__tag">{{ tag }}</span>
-                {% endfor %}
+                <p class="list__info">PushBots v1</p>
             </li>
-            {% endfor %}
         </ul>
     </section>
 {% include footer.html %}
