Created offline page and made it display when there is no network connection. the page automatically reloads when there is a change in the network status.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -40,6 +40,7 @@
 
     <script>
         {% include js/register-service-worker.js %}
+        {% include js/online-status-reload.js %}
     </script>
     
     <title>{% if page.title %}{{ page.title }} | {% endif %}{{ site.title }}</title>
