--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,5 @@
 <nav class="wrapper header-nav">
+    <div id="offline">Connection to the network has been lost. We will re-connect you as soon as possible</div>
     <ul class="nav-list">
         <li class="nav-list__item"><a class="nav-list__link" href="{{ site.url }}/">Home</a></li>
     </ul>
