--- a/_styles/components/header-nav.scss
+++ b/_styles/components/header-nav.scss
@@ -3,7 +3,7 @@
 //----------------
 
 .header-nav{
-    border-top:5px solid $primary-colour;
+    border-top: 5px solid $primary-colour;
 }
 
 .nav-list{
@@ -19,4 +19,21 @@
         // color: $light;
         padding: 0 $base-unit;
     }
+}
+
+#offline {
+    position: absolute;
+    height: 20px;
+    padding: 10px;
+    top: -40px;
+    left: 0;
+    right: 0;
+    background: #f00;
+    color: #fff;
+    transition: top 0.5s ease;
+}
+
+#offline.appear {
+    top: 0;
+    transition: top 0.5s ease;
 }
