--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,6 +1,8 @@
 <nav class="wrapper header-nav">
     <div id="offline">Connection to the network has been lost. We will re-connect you as soon as possible</div>
     <ul class="nav-list">
-        <li class="nav-list__item"><a class="nav-list__link" href="{{ site.url }}/">Home</a></li>
+        <li class="nav-list__item"><a class="nav-list__link" href="{{ site.url }}/" title="Home">Home</a></li>
+        <li class="nav-list__item"><a class="nav-list__link" href="{{ site.url }}/hello" title="Hello">Hello</a></li>
+        <li class="nav-list__item"><a class="nav-list__link" href="{{ site.url }}/offline" title="Offline">Offline</a></li>
     </ul>
 </nav>
