Moved offline banner style to a new file

--- a/bundle.scss
+++ b/bundle.scss
@@ -9,6 +9,7 @@
 "components/header",
 "components/footer",
 "components/header-nav",
+"components/offline",
 "components/list",
 "holiday-styles",
 "syntax-highlighter";
