--- a/_styles/layout.scss
+++ b/_styles/layout.scss
@@ -22,6 +22,6 @@ body{
     margin: 0 auto;
 
     @include screen-bigger-than($medium){
-        padding: $base-unit 0;
+        padding: $base-unit $base-unit ;
     }
 }
